# ManasOpengl-Starter-files

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  clean.sh  run.sh
Graphics_starter_files/: CMakeLists.txt  Camera.cpp  Core.cpp  Debug.cpp  Gui.cpp  GuiEvents.h  Main.cpp  Mesh.cpp  Model.cpp  SceneLoader.cpp  Shader.cpp  Window.cpp  World.cpp
Graphics_starter_files/include/: Camera.h  Core.h  Debug.h  Gui.h  Mesh.h  Model.h  SceneLoader.h  Shader.h  Window.h  World.h
Graphics_starter_files/libraries/lib/: glfw3.lib
Graphics_starter_files/rs/shaders/: cubeMap.frag  cubeMap.vert  grid.vert  standard.frag  standard.vert
